Added PDF file support